--- a/data/pathfinder-bestiary/gDMPUL0UiOHrUUd3.htm
+++ b/data/pathfinder-bestiary/gDMPUL0UiOHrUUd3.htm
@@ -1,7 +1,6 @@
 Name: Aasimar Redeemer
 Nom: Rédempteur Aasimar
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Many immortals dwell upon the other planes of the Great Beyond. Some are benevolent and kindly, like angels. Others are cruel and destructive, like demons. And some flt roles outside of morality, like psychopomps. It&rsquo;s far from unheard of that mortals and immortals alike become entangled romantically, and the children of such engagements carry a supernatural element in their bloodlines for generations to follow. After the first generation, this otherworldly influence usually lies dormant, but now and then, the influence can manifest strongly in descendants many years later. These inheritors of extraplanar legacies are known collectively as planar scions.</p>
