--- a/data/pathfinder-bestiary/gWxpeqOQ54Jd4HTG.htm
+++ b/data/pathfinder-bestiary/gWxpeqOQ54Jd4HTG.htm
@@ -1,9 +1,8 @@
 Name: Caligni Stalker
 Nom: Traqueur caligni
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Caligni stalkers are often leaders of caligni enclaves.<br /><br />
 ------ Description (fr) ------
-Les Traqueurs sont souvent les chefs des enclaves calignis.<br><br>
+Les Traqueurs sont souvent les chefs des enclaves Calignis.<br><br>
