--- a/data/pathfinder-bestiary/Hkq9ZS2J2iKnT7vT.htm
+++ b/data/pathfinder-bestiary/Hkq9ZS2J2iKnT7vT.htm
@@ -1,7 +1,6 @@
 Name: Sewer Ooze
 Nom: Vase des égouts
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 These amorphous masses of sewage and other detritus make their way through filthy culverts beneath cities large and small.<br /><br />
