--- a/data/pathfinder-bestiary/IUzKFRX0uHl1yxkn.htm
+++ b/data/pathfinder-bestiary/IUzKFRX0uHl1yxkn.htm
@@ -1,9 +1,8 @@
 Name: Greater Shadow
 Nom: Ombre majeure
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Shadows that spend long amounts of time on the Shadow Plane and absorb its magic become greater shadows.<br /><br />
 ------ Description (fr) ------
-Les ombres qui passent beaucoup de temps sur le plan de l’ombre et absorbent sa magie deviennent des ombres majeures.
+Les Ombres qui passent beaucoup de temps sur le plan de l’Ombre et absorbent sa magie deviennent des Ombres majeures.
