--- a/data/pathfinder-bestiary/Ix1PziAEk9IIMYBz.htm
+++ b/data/pathfinder-bestiary/Ix1PziAEk9IIMYBz.htm
@@ -1,9 +1,8 @@
 Name: Zombie Brute
 Nom: Brute zombie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Necromantic augmentations have granted this zombie increased size and power.<br /><br />
 ------ Description (fr) ------
-Des augmentations nécromantiques ont conféré à ce zombie une taille et une puissance impressionnantes.
+Des augmentations nécromantiques ont conféré à ce Zombie une taille et une puissance impressionnantes.
