--- a/data/pathfinder-bestiary/jGzVwekcRX5aQpbT.htm
+++ b/data/pathfinder-bestiary/jGzVwekcRX5aQpbT.htm
@@ -1,9 +1,8 @@
 Name: Goblin Commando
-Nom: Commando gobelin
-État: changé
-État d'origine: officielle
+Nom: Commando Gobelin
+État: officielle
 
 ------ Description (en) ------
 The theoretical leaders of goblin raids are called goblin commandos. In practice, goblin commandos rarely continue to lead their comrades once a battle has begun. Most shirk their responsibilities in favor of wading into the fray and claiming more glory from their tribe-mates.<br /><br />
 ------ Description (fr) ------
-Les gobelins commandos sont, en théorie, les chefs des raids perpétrés par ces créatures. Dans la pratique, il est rare qu’ils continuent à commander leurs camarades une fois que la bataille a commencé. La plupart se soustraient à leurs responsabilités pour aller se jeter dans la mêlée afin de revendiquer un plus grand prestige que leurs frères tribaux.<br><br>
+Les Gobelins commandos sont, en théorie, les chefs des raids perpétrés par ces créatures. Dans la pratique, il est rare qu’ils continuent à commander leurs camarades une fois que la bataille a commencé. La plupart se soustraient à leurs responsabilités pour aller se jeter dans la mêlée afin de revendiquer un plus grand prestige que leurs frères tribaux.<br><br>
