--- a/data/pathfinder-bestiary/jMiiQDIDxW9ZMvCV.htm
+++ b/data/pathfinder-bestiary/jMiiQDIDxW9ZMvCV.htm
@@ -1,9 +1,8 @@
 Name: Dhampir Wizard
-Nom: Magicien dhampir
-État: changé
-État d'origine: officielle
+Nom: Magicien Dhampir
+État: officielle
 
 ------ Description (en) ------
 This dhampir is a svetocher, the child of a moroi vampire.<br /><br />
 ------ Description (fr) ------
-Ce dhampir est un Svetocher, l’enfant d’un vampire moroï.<br><br>
+Ce Dhampir est un Svetocher, l’enfant d’un vampire Moroï.<br><br>
