--- a/data/pathfinder-bestiary/jVZRROs0GzDjVrgi.htm
+++ b/data/pathfinder-bestiary/jVZRROs0GzDjVrgi.htm
@@ -1,9 +1,8 @@
 Name: Goblin Warrior
-Nom: Guerrier gobelin
-État: changé
-État d'origine: officielle
+Nom: Guerrier Gobelin
+État: officielle
 
 ------ Description (en) ------
 The frontline fighters of goblin tribes prefer to fight in large groups-especially when they can outnumber their foes at least three to one.<br /><br />
 ------ Description (fr) ------
-Les combattants de première ligne des tribus de gobelins préfèrent se battre au sein de larges groupes, surtout quand ils peuvent attaquer à au moins trois contre un.<br><br>
+Les combattants de première ligne des tribus de Gobelins préfèrent se battre au sein de larges groupes, surtout quand ils peuvent attaquer à au moins trois contre un.<br><br>
