--- a/data/pathfinder-bestiary/KsWAIXTTh3mfNWOY.htm
+++ b/data/pathfinder-bestiary/KsWAIXTTh3mfNWOY.htm
@@ -1,7 +1,6 @@
 Name: Giant Viper
 Nom: Vipère géante
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 The giant viper's fangs are a frightening sight, with injection tubes as long as daggers. The sheer amount of venom injected by a giant viper can cause severe blood clotting and leave a victim utterly drained of vitality.<br /><br />
