--- a/data/pathfinder-bestiary/KxN9aGFGPxl6oLGF.htm
+++ b/data/pathfinder-bestiary/KxN9aGFGPxl6oLGF.htm
@@ -1,7 +1,6 @@
 Name: Plague Zombie
 Nom: Zombie pestiféré
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Plague zombies are infested with hideous contagions.<br /><br />
