--- a/data/feats/ancestry-01-WYEjiUZQJP3uMk4Z.htm
+++ b/data/feats/ancestry-01-WYEjiUZQJP3uMk4Z.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your contrary nature means you bounce back with prejudice.
-Avantage: Votre nature contraire signifie que vous rebondissez avec des préjugés.
+Avantage: Vous réagissez vigorureusement aux effets d'émotion et de peur.
 
 ------ Description (en) ------
 <p>Your contrary nature means you bounce back with prejudice. When you roll a success on a save against an emotion or fear effect, you get a critical success instead.</p>
