--- a/data/feats/ancestry-01-WzJaArukCUf9hpeP.htm
+++ b/data/feats/ancestry-01-WzJaArukCUf9hpeP.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've nurtured the supernatural abilities gifted by your hag mother, particularly your sight.
-Avantage: Tu as entretenu les capacités surnaturelles que t'a léguées ta mère, en particulier ta vue.
+Avantage: Vous obtenez vision dans le noir.
 
 ------ Description (en) ------
 <p>You've nurtured the supernatural abilities gifted by your hag mother, particularly your sight. You gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision}.</p>
