--- a/data/feats/ancestry-01-wtTye8OrC9cuK7YP.htm
+++ b/data/feats/ancestry-01-wtTye8OrC9cuK7YP.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have an impressive innate ability to tame and command ferocious beasts.
-Avantage: Vous avez une impressionnante capacité innée à dompter et à commander des bêtes féroces.
+Avantage: Vous êtes qualifié dans la compétence Nature et obtenez le don Dressage animalier.
 
 ------ Description (en) ------
 <p>You have an impressive innate ability to tame and command ferocious beasts. You become trained in the Nature skill and gain the @Compendium[pf2e.feats-srd.nowEaHgIyij7im8F]{Train Animal} skill feat.</p>
 ------ Description (fr) ------
-<p>Vous avez une capacité inné impressionnante pour apprivoiser et donner des ordres aux bêtes féroces. Vous devenez qualifié dans la compétence Nature et obtenez le don de compétence @Compendium[pf2e.feats-srd.nowEaHgIyij7im8F]{Dressage animalier}.</p>
+<p>Vous avez une capacité inné impressionnante pour apprivoiser et donner des ordres aux bêtes féroces. Vous êtes qualifié dans la compétence Nature et obtenez le don de compétence @Compendium[pf2e.feats-srd.nowEaHgIyij7im8F]{Dressage animalier}.</p>
