--- a/data/feats/ancestry-01-XXAqMjml33jnQiDO.htm
+++ b/data/feats/ancestry-01-XXAqMjml33jnQiDO.htm
@@ -6,7 +6,7 @@ PrereqFR: au moins 100 ans
 
 ------ Benefits and spoiler ----
 Benefits: Your immortal lineage has granted you a lifespan much longer than most mortals, and you've learned a lot along the way.
-Avantage: Votre lignée immortelle vous a accordé une durée de vie bien plus longue que celle de la plupart des mortels, et vous avez beaucoup appris en cours de route.
+Avantage: Vous êtes qualifié dans deux compétences de votre choix.
 
 ------ Description (en) ------
 <p>Your immortal lineage has granted you a lifespan much longer than most mortals, and you’ve learned a lot along the way. You become trained in two skills of your choice.</p>
