--- a/data/feats/ancestry-01-xOCmeskMkd8nCmba.htm
+++ b/data/feats/ancestry-01-xOCmeskMkd8nCmba.htm
@@ -7,9 +7,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your mother was a moon hag, a handmaiden of Groetus , and you have a single scarlet eye and a sliver of her supernal foresight.
-Avantage: Ta mère était une sorcière de la lune, une servante de Groetus, et tu n'as qu'un seul œil écarlate et une parcelle de sa vision céleste.
+Avantage: Vous pouvez obtenez le tour de magie Assistance divine.
 
 ------ Description (en) ------
 <p>Your mother was a moon hag, a handmaiden of Groetus, and you have a single scarlet eye and a sliver of her supernal foresight. You can cast @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{Guidance} as an occult innate cantrip. A cantrip is heightened to a spell level equal to half your level rounded up.</p>
 ------ Description (fr) ------
-<p>Votre mère était une guenaude de la lune, une servante de Groetus, et vous avez un unique œil écarlate et un éclat de leur céleste prescience. Vous pouvez lancer @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{Assistance divine} comme un tour de magie inné occulte. Un tour de magie est intensifié à un niveau de sort égal à la moitié de votre niveau arrondi au supérieur.</p>
+<p>Votre mère était une guenaude de la lune, une servante de Groetus et vous avez un unique œil écarlate et possédez un éclat de sa céleste prescience. Vous pouvez lancer @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{Assistance divine} comme un tour de magie inné occulte. Un tour de magie est intensifié à un niveau de sort égal à la moitié de votre niveau arrondi au supérieur.</p>
