--- a/data/feats/ancestry-01-xjwI1DlJvb7Rg6TG.htm
+++ b/data/feats/ancestry-01-xjwI1DlJvb7Rg6TG.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have learned the history and origins of your people and how to connect to both your land and sea heritage.
-Avantage: Vous avez appris l'histoire et les origines de votre peuple et comment vous connecter à votre patrimoine terrestre et maritime.
+Avantage: Vous êtes qualifié en Athlétisme et en Nature et en Connaissance des azarketis.
 
 ------ Description (en) ------
 <p>You have learned the history and origins of your people and how to connect to both your land and sea heritage. You become trained in Athletics and Nature. If you would automatically become trained in one of those skills (from your background or class, for example), you instead become trained in a skill of your choice. You also become trained in Azarketi Lore.</p>
