--- a/data/feats/ancestry-01-yCaWcKlpbAfebqlO.htm
+++ b/data/feats/ancestry-01-yCaWcKlpbAfebqlO.htm
@@ -1,9 +1,12 @@
 Name: Shoony Lore
 Nom: Connaissance des Shoonis
 PrereqEN: 
-Avantage:
 PrereqFR: 
 État: libre
+
+------ Benefits and spoiler ----
+Benefits: Your incisors have grown into true fangs: long, sharp, and well-suited to drawing blood.
+Avantage: Vous êtes qualifié en Diplomatie et en Survie et en Connaissance des shoonis.
 
 ------ Description (en) ------
 <p>Growing up in shoony society, you learned the value of honesty, friendship, and hard work, even during trying times. You gain the trained proficiency rank in Diplomacy and Survival. If you would automatically become trained in one of those skills (from your background or class, for example), you instead become trained in a skill of your choice. You also become trained in Shoony Lore.</p>
