--- a/data/feats/ancestry-01-Y1bEisU8jVCsIYk3.htm
+++ b/data/feats/ancestry-01-Y1bEisU8jVCsIYk3.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have a innate familiarity with forested areas.
-Avantage: Vous avez une familiarité innée avec les zones forestières.
+Avantage: Vos capacités de Survie en forêt sont bien meilleures que les autres.
 
 ------ Description (en) ------
 <p>You have a innate familiarity with forested areas. When in a forest or jungle environment, if you roll a critical failure on a Survival skill check to Sense Direction, Subsist, or Cover Tracks, you get a failure instead, and if you roll a success, you get a critical success instead.</p>
