--- a/data/feats/ancestry-01-Y8sKn8NH1wC7Mrui.htm
+++ b/data/feats/ancestry-01-Y8sKn8NH1wC7Mrui.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your incisors have grown into true fangs: long, sharp, and well-suited to drawing blood.
-Avantage: Vos incisives sont devenues de véritables crocs : longs, tranchants et bien adaptés pour faire couler le sang.
+Avantage: Vous obtenez une attaque à mains nues de crocs qui inflige 1d6 dégâts perforants.
 
 ------ Description (en) ------
 <p>Your incisors have grown into true fangs: long, sharp, and well-suited to drawing blood.</p>
 <p>You gain a fangs unarmed attack that deals <a class="inline-roll roll" data-mode="roll" data-flavor="piercing" data-formula="1d6" title="piercing"><i class="fas fa-dice-d20"></i> 1d6</a> piercing damage. Your fangs are in the brawling group and have the grapple and unarmed traits.</p>
 ------ Description (fr) ------
-<p>Vos incisives ont grandi en formant de véritables crocs : longues, pointues et idéales pour drainer le sang.</p>
-<p>Vous obtenez une attaque à mains nues de crocs qui inflige <a class="inline-roll roll" data-mode="roll" data-flavor="perforants" data-formula="1d6" title="perforants"><i class="fas fa-dice-d20"></i>1d6</a> dégâts perforants. Vos crocs sont dans le groupe pugilat et ont les traits à mains nues et saisir.</p>
+<p>Vos incisives ont grandi en formant de véritables crocs : longs, pointus et idéaux pour drainer le sang.</p>
+<p>Vous obtenez une attaque à mains nues de crocs qui inflige 1d6 dégâts perforants. Vos crocs sont dans le groupe pugilat et ont les traits à mains nues et saisir.</p>
