--- a/data/feats/ancestry-01-ZbRVqf14RTJJIZXG.htm
+++ b/data/feats/ancestry-01-ZbRVqf14RTJJIZXG.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your happy-go-lucky nature makes it seem like misfortune avoids you.
-Avantage: Votre nature joyeuse et insouciante donne l'impression que le malheur vous évite.
+Avantage: Vous pouvez relancer un unique jet de sauvegarde ou test de compétence par jour.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
