--- a/data/feats/ancestry-01-xTe8lNBp76jsrhYh.htm
+++ b/data/feats/ancestry-01-xTe8lNBp76jsrhYh.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your mother was an annis hag , known for physical prowess, and you have one violet or steel-gray eye.
-Avantage: Votre mère était une sorcière annis, connue pour ses prouesses physiques, et vous avez un œil violet ou gris acier.
+Avantage: Vous possédez une attaque de griffes en fer froid.
 
 ------ Description (en) ------
 <p>Your mother was an annis hag, known for physical prowess, and you have one violet or steel-gray eye. You have thick, sturdy claws made of cold iron that grow naturally from your body. You gain a claw unarmed attack that deals <a class="inline-roll roll" data-mode="roll" data-flavor="slashing" data-formula="1d6" title="slashing"><i class="fas fa-dice-d20"></i> 1d6</a> slashing damage. Your claws are in the brawling group, have the unarmed and grapple traits, and are cold iron.</p>
 ------ Description (fr) ------
-<p>Votre mère était une guenaude annis, réputée pour ses prouesses physiques et vous avez un œil violet ou gris-acier.</p>
-<p>Vous possédez d'épaisses et robustes griffes faites de fer froid qui grandissent naturellement à partir de votre corps. Vous obtenez une attaque de griffe qui inflige <a class="inline-roll roll" data-mode="roll" data-flavor="slashing" data-formula="1d6" title="slashing"><i class="fas fa-dice-d20"></i>1d6</a> dégâts tranchants. Vos griffes sont dans le groupe pugilat, possède les traits mains nues et saisir et sont en fer froid.</p>
+<p>Votre mère était une guenaude annis, réputée pour ses prouesses physiques et vous possédez un œil violet ou gris-acier.</p>
+<p>Vous obtenez d'épaisses et robustes griffes faites de fer froid qui grandissent naturellement à partir de votre corps. Vous obtenez une attaque de griffe qui inflige 1d6 dégâts tranchants. Vos griffes sont dans le groupe pugilat, possèdent les traits mains nues et saisir et sont en fer froid.</p>
