--- a/data/feats/ancestry-01-xruboxaTF6nw8l7M.htm
+++ b/data/feats/ancestry-01-xruboxaTF6nw8l7M.htm
@@ -1,14 +1,14 @@
 Name: Miresoul
-Nom: Âmebourbier
+Nom: Âme bourbier
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have a connection to the muddier denizens of the Plane of Earth from its border with the Plane of Water , and your elemental lineage manifests as clay or mud, reflecting that bond.
-Avantage: Vous avez un lien avec les habitants les plus boueux du plan de la Terre depuis sa frontière avec le plan de l'Eau, et votre lignée élémentaire se manifeste sous forme d'argile ou de boue, reflétant ce lien.
+Avantage: Vous êtes qualifié en Acrobatieset obtenez le don Se faufiler rapidement.
 
 ------ Description (en) ------
 <p>You have a connection to the muddier denizens of the Plane of Earth from its border with the Plane of Water, and your elemental lineage manifests as clay or mud, reflecting that bond. Your body’s mudlike quality makes it easy for you to compress and squeeze yourself through smaller areas. You gain the trained proficiency rank in Acrobatics. If you would automatically become trained in Acrobatics (from your background or class, for example), you instead become trained in a skill of your choice. You gain the @Compendium[pf2e.feats-srd.3G8xUlgCjRmRJNfP]{Quick Squeeze} skill feat.</p>
 ------ Description (fr) ------
-<p>Vous avez un lien aavec les habitants boueux du Plan de la terre à sa frontière avec le Plan de l'eau et votre lignage se manifeste comme de l'argile ou de la boue, reflétant ce lien. La qualité boueuse de votre corps vous rend plus facile de vous compresser et se faufiler avec des zones plus petites. Vous êtes qualifié en Acrobaties. Si vous deviez être automatiquement qualifié en Acrobaties (par votre historiqu eou votre classe, par exemple), vous devenez qualifié à la place dans une compétence de votre choix. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.3G8xUlgCjRmRJNfP]{Se faufiler rapidement}.</p>
+<p>Vous avez un lien aavec les habitants boueux du Plan de la terre à sa frontière avec le Plan de l'eau et votre lignage élémentaire se manifeste en reflétant ce lien comme de l'argile ou de la boue. La qualité boueuse de votre corps vous permet plus facilement de vous compresser et de vous faufiler dans des zones étroites. Vous êtes qualifié en Acrobaties. Si vous deviez être automatiquement qualifié en Acrobaties (par votre historique ou votre classe, par exemple), vous devenez qualifié à la place dans une compétence de votre choix. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.3G8xUlgCjRmRJNfP]{Se faufiler rapidement}.</p>
