--- a/data/feats/ancestry-01-xzpMQ2ZRn9zC23XG.htm
+++ b/data/feats/ancestry-01-xzpMQ2ZRn9zC23XG.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You instinctively know how to flee danger.
-Avantage: Vous savez instinctivement comment fuir le danger.
+Avantage: En fuyant, vous évitez plus facilement les réactions de vos ennemis.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are adjacent to at least one enemy.</p>
