--- a/data/feats/ancestry-01-y7Or0CbcQBDdS9yG.htm
+++ b/data/feats/ancestry-01-y7Or0CbcQBDdS9yG.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: As much as you might care for them, you've come to terms with the ephemeral nature of non-elves, and it makes their threats feel less troublesome.
-Avantage: Même si vous vous souciez d'eux, vous vous êtes fait à l'idée de la nature éphémère des non-elfes, et cela rend leurs menaces moins inquiétantes.
+Avantage: Vous êtes moins facile que les autres à Impressionner.
 
 ------ Description (en) ------
 <p>As much as you might care for them, you've come to terms with the ephemeral nature of non-elves, and it makes their threats feel less troublesome.</p>
