--- a/data/feats/ancestry-01-yQZ6naE8AP6JYTSH.htm
+++ b/data/feats/ancestry-01-yQZ6naE8AP6JYTSH.htm
@@ -2,18 +2,17 @@ Name: Ember's Eyes
 Nom: Yeux de braise
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your eyes blaze with inner flame.
-Avantage: Vos yeux brillent d'une flamme intérieure.
+Avantage: Vous obtenez vision nocturne ou vision dans le noir.
 
 ------ Description (en) ------
 <p>Your eyes blaze with inner flame. You gain @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Low-Light Vision}, or you gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision} if your ancestry already has low-light vision.</p>
 <hr />
 <p><strong>Specia</strong> l If your ancestry has neither low-light vision nor darkvision, you can take this ancestry feat a second time to gain darkvision. You can’t retrain out of this feat.</p>
 ------ Description (fr) ------
-<p>Vos yeux s'embrasent de votre flamme intérieure. Vous obtenez @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Vision nocturne} ou vous obtenez @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Vision dans le noir} si votre  ascendance possède déjà vision nocturne.</p>
+<p>Vos yeux s'embrasent de votre flamme intérieure. Vous obtenez @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Vision nocturne} ou vous obtenez @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Vision dans le noir} si votre ascendance possède déjà vision nocturne.</p>
 <hr />
 <p><strong>Spécial</strong> Si votre ascendance ne possède ni vision nocturne, ni vision dans le noir, vous pouvez prendre ce don d'ascendance une seconde fois pour obtenir vision dans le noir. Vous ne pouvez pas utiliser le réapprentissage pour le perdre.</p>
