--- a/data/pathfinder-bestiary/LHHgGSs0ELCR4CYK.htm
+++ b/data/pathfinder-bestiary/LHHgGSs0ELCR4CYK.htm
@@ -1,9 +1,8 @@
 Name: Ghoul
 Nom: Goule
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Ghouls are ravenous undead who haunt graveyards and eat corpses.<br /><br />
 ------ Description (fr) ------
-Les goules sont des morts-vivants voraces qui hantent les cimetières et dévorent des cadavres.<br><br>
+Les Goules sont des morts-vivants voraces qui hantent les cimetières et dévorent des cadavres.<br><br>
