--- a/data/pathfinder-bestiary/LUtSo30fQWj7mrDn.htm
+++ b/data/pathfinder-bestiary/LUtSo30fQWj7mrDn.htm
@@ -1,9 +1,8 @@
 Name: Storm Lord
 Nom: Seigneur des tempêtes
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Storm lords wage battles to claim important territory within the Plane of Air.<br /><br />
 ------ Description (fr) ------
-Les seigneurs des tempêtes livrent des combats pour revendiquer d’importants territoires du plan de l’air.<br><br>
+Les Seigneurs des tempêtes livrent des combats pour revendiquer d’importants territoires du plan de l’air.<br><br>
