--- a/data/pathfinder-bestiary/NbGLrlt7RYdFFBQ5.htm
+++ b/data/pathfinder-bestiary/NbGLrlt7RYdFFBQ5.htm
@@ -1,9 +1,8 @@
 Name: Elemental Inferno
 Nom: Brasier élémentaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Walking conflagrations of unimaginably hot fire, elemental infernos are harbingers of destruction and heedless chaos.<br /><br />
 ------ Description (fr) ------
-Incendies ambulants constitués d’un feu incroyablement chaud, les brasiers élémentaires sont les hérauts de la destruction et du chaos.<br><br>
+Incendies ambulants constitués d’un feu incroyablement chaud, les Brasiers élémentaires sont les hérauts de la destruction et du chaos.<br><br>
