--- a/data/pathfinder-bestiary/NeYU7wwCv0RUesZ1.htm
+++ b/data/pathfinder-bestiary/NeYU7wwCv0RUesZ1.htm
@@ -1,7 +1,6 @@
 Name: Stone Mauler
 Nom: Broyeur de pierre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 These towering heaps of earth can inflict tremendous damage up close and from afar.<br /><br />
