--- a/data/pathfinder-bestiary/nFMZjWQL6pd9XdqR.htm
+++ b/data/pathfinder-bestiary/nFMZjWQL6pd9XdqR.htm
@@ -1,9 +1,8 @@
 Name: Caligni Creeper
 Nom: Caligni rampant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 The most widespread of the caligni are the mischievous caligni creepers.<br /><br />
 ------ Description (fr) ------
-Les calignis rampants sont les plus répandus de leur espèce.<br><br>
+Les Calignis rampants sont les plus répandus de leur espèce.<br><br>
