--- a/data/pathfinder-bestiary/NVWaLagWOu5tCCZu.htm
+++ b/data/pathfinder-bestiary/NVWaLagWOu5tCCZu.htm
@@ -1,9 +1,8 @@
 Name: Sod Hound
 Nom: Molosse de tourbe
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Sod hounds are mossy extraplanar canines formed of packed dirt and pebbles.<br /><br />
 ------ Description (fr) ------
-Les molosses de tourbe sont des canidés extraplanaires principalement constitués de terre tassée et de cailloux. <br><br>
+Les Molosses de tourbe sont des canidés extraplanaires principalement constitués de terre tassée et de cailloux. <br><br>
