--- a/data/pathfinder-bestiary/o3DRwRKeJrl83Wv9.htm
+++ b/data/pathfinder-bestiary/o3DRwRKeJrl83Wv9.htm
@@ -1,9 +1,8 @@
 Name: Gnoll Hunter
-Nom: Chasseur gnoll
-État: changé
-État d'origine: officielle
+Nom: Chasseur Gnoll
+État: officielle
 
 ------ Description (en) ------
 Gnoll hunters serve their clans by hunting for food in the wilds, marauding along well-traveled roads, and tracking down escaped slaves.<br /><br />
 ------ Description (fr) ------
-Les chasseurs gnolls servent leur clan en chassant dans les régions sauvages pour rapporter la nourriture, en rôdant le long des routes fréquentées et en traquant des esclaves en fuite.<br><br>
+Les chasseurs Gnolls servent leur clan en chassant dans les régions sauvages pour rapporter la nourriture, en rôdant le long des routes fréquentées et en traquant des esclaves en fuite.<br><br>
