--- a/data/feats/ancestry-01-ZxiAMposVPDNPwxI.htm
+++ b/data/feats/ancestry-01-ZxiAMposVPDNPwxI.htm
@@ -2,12 +2,11 @@ Name: Forge-Day's Rest
 Nom: Repos du jour de forge
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your unusual rest cycle allows you to recover faster.
-Avantage: Votre cycle de repos inhabituel vous permet de récupérer plus rapidement.
+Avantage: Vous récupérez plus rapidement lorsque vous pouvez vous reposer davantage.
 
 ------ Description (en) ------
 <p><strong>Access</strong> underground dwarf ethnicity<br /></p>
