--- a/data/feats/ancestry-01-zvtYsz9jk8tPvlpS.htm
+++ b/data/feats/ancestry-01-zvtYsz9jk8tPvlpS.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can briefly sleep to regain your energy quickly.
-Avantage: Vous pouvez dormir brièvement pour retrouver rapidement votre énergie.
+Avantage: En passant 10 minutes à dormir, vous obtenez des points de vie temporaires.
 
 ------ Description (en) ------
 <p>You can briefly sleep to regain your energy quickly. Once per hour, by sleeping for 10 minutes, you can gain temporary Hit Points equal to your level that last for 10 minutes.</p>
 ------ Description (fr) ------
-<p>Vous pouvez dormir brièvement pour regagner votre énergie rapidement. Une fois par heure, en dormant pendant 10 minutes, vous pouvez obtenir des Points de vie égaux à votre niveau qui durent pendant 10 minutes.</p>
+<p>Vous pouvez dormir brièvement pour regagner votre énergie rapidement. Une fois par heure, en dormant pendant 10 minutes, vous pouvez obtenir des Points de vie temporaires égaux à votre niveau qui durent pendant 10 minutes.</p>
