--- a/data/feats/ancestry-01-Zz7isE8Td2xDWqR8.htm
+++ b/data/feats/ancestry-01-Zz7isE8Td2xDWqR8.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've picked up a few magical tricks.
-Avantage: Tu as appris quelques tours de magie.
+Avantage: vous pouvez choisir quotidiennement un des trois tours de magie divin associés à votre ascendance kitsune.
 
 ------ Description (en) ------
 <p>You’ve picked up a few magical tricks. During your daily preparations, choose @Compendium[pf2e.spells-srd.4gBIw4IDrSfFHik4]{Daze}, @Compendium[pf2e.spells-srd.RA7VKcen3p56rVyZ]{Forbidding Ward}, or @Compendium[pf2e.spells-srd.atlgGNI1E1Ox3O3a]{Ghost Sound}. Until your next daily preparations, you can cast this cantrip as a divine innate spell at will. A cantrip is heightened to a spell level equal to half your level rounded up.</p>
