--- a/data/feats/ancestry-05-1muxLx8Vacn2SLHc.htm
+++ b/data/feats/ancestry-05-1muxLx8Vacn2SLHc.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You deliver a punishing blow to an enemy's knee, shin, or other vulnerable anatomy within your reach.
-Avantage: Vous donnez un coup punitif au genou, au tibia ou à toute autre partie vulnérable de l'anatomie d'un ennemi qui se trouve à votre portée.
+Avantage: Vous pouvez ralentir la Vitesse d'une créature en la frappant aux jambes.
 
 ------ Description (en) ------
 <p>You deliver a punishing blow to an enemy's knee, shin, or other vulnerable anatomy within your reach.</p>
