--- a/data/feats/ancestry-05-8CSewrCVEmL8sjnk.htm
+++ b/data/feats/ancestry-05-8CSewrCVEmL8sjnk.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your growing connection to your celestial forebears has granted you one of their resistances as well.
-Avantage: Votre lien croissant avec vos ancêtres célestes vous a également conféré une de leurs résistances.
+Avantage: Vous obtenez une résistance de 5 contre un type de dégâts d'énergie associée à votre lignage.
 
 ------ Description (en) ------
 <p>Your growing connection to your celestial forebears has granted you one of their resistances as well. Choose one of the following energy damage types: acid, cold, electricity, fire, or sonic. You gain resistance 5 to that damage type.</p>
