--- a/data/feats/ancestry-05-8DIzXO1YpsU3DpJw.htm
+++ b/data/feats/ancestry-05-8DIzXO1YpsU3DpJw.htm
@@ -6,7 +6,7 @@ PrereqFR: expert en Artisanat|Fabrication de pièges artisanaux
 
 ------ Benefits and spoiler ----
 Benefits: Your expertise makes your snares more powerful, and you can place them quickly and efficiently.
-Avantage: Votre expertise rend vos pièges plus puissants, et vous pouvez les placer rapidement et efficacement.
+Avantage: Votre expertise rend vos pièges plus puissants et vous pouvez les déployer rapidement et efficacement.
 
 ------ Description (en) ------
 <p>Your expertise makes your snares more powerful, and you can place them quickly and efficiently.</p>
