--- a/data/feats/ancestry-05-9WsYVbe47aSADs1Q.htm
+++ b/data/feats/ancestry-05-9WsYVbe47aSADs1Q.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes halfelines
 
 ------ Benefits and spoiler ----
 Benefits: You are particularly adept at fighting with your people’s favored weapons.
-Avantage: Vous êtes particulièrement doué pour combattre avec les armes préférées de votre peuple.
+Avantage: vous appliquez l’effet critique spécialisé des armes familières des halfelins.
 
 ------ Description (en) ------
 <p>You are particularly adept at fighting with your people's favored weapons. Whenever you critically succeed at an attack roll using a shortsword, a sling, or a halfling weapon, you apply the weapon's critical specialization effect.</p>
