--- a/data/feats/ancestry-05-1miLVRtvsnZU6TTk.htm
+++ b/data/feats/ancestry-05-1miLVRtvsnZU6TTk.htm
@@ -2,12 +2,11 @@ Name: Anchoring Roots
 Nom: Racines ancrées
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Small roots sprout from your feet, steadying you as you move.
-Avantage: De petites racines poussent à partir de vos pieds, vous stabilisant lors de vos déplacements.
+Avantage: Vos racines vous aident à garder l'équilibre et à rester en place.
 
 ------ Description (en) ------
 <p>Small roots sprout from your feet, steadying you as you move. You gain the @Compendium[pf2e.feats-srd.CnqMJR8e9jqJR7MM]{Steady Balance} skill feat, even if you aren’t trained in Acrobatics, and you can use the @Compendium[pf2e.actionspf2e.xpsD4DsYHKXCB4ac]{Anchor} action.</p>
