--- a/data/feats/ancestry-05-2IO2W09IvwGHvatH.htm
+++ b/data/feats/ancestry-05-2IO2W09IvwGHvatH.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can demonstrate how to quickly twist out of the way of dangerous effects.
-Avantage: Vous pouvez montrer comment s'écarter rapidement des effets dangereux.
+Avantage: Vous pouvez Aider un allié et lui donner un bonus au jet de Réflexes.
 
 ------ Description (en) ------
 <p>You can demonstrate how to quickly twist out of the way of dangerous effects. You can use the Aid reaction to grant a bonus to an ally’s Reflex save. As usual for Aid, you need to prepare by using an action on your turn to encourage the ally.</p>
 ------ Description (fr) ------
-<p>Vous pouvez démontrer comment vous écarter rapidement du passage de dangereux effets. Vous pouvez utiliser l'action Aider pour accorder un bonus au jet de sauvegarde de Réflexes d'un allié. Comme habituellement avec Aider, vous avez besoin de vous préparer en utilisant une action lors de votre tour pour encourager l'allié.</p>
+<p>Vous pouvez démontrer comment vous écarter rapidement du passage de dangereux effets. Vous pouvez utiliser l'action Aider pour accorder à un allié un bonus au jet de Réflexes. Comme habituellement avec Aider, vous avez besoin de vous préparer en utilisant une action lors de votre tour pour encourager l'allié.</p>
