--- a/data/feats/ancestry-05-2RmsQrLySNYQ4uIn.htm
+++ b/data/feats/ancestry-05-2RmsQrLySNYQ4uIn.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You are attuned to the minute sounds and sensations of restless spirits.
-Avantage: Vous êtes à l'écoute des moindres sons et sensations des esprits agités.
+Avantage: Vous percevez instinctivement les apparitions.
 
 ------ Description (en) ------
 <p>You are attuned to the minute sounds and sensations of restless spirits. Even if you aren't @Compendium[pf2e.actionspf2e.TiNDYUGlMmxzxBYU]{Searching}, you can attempt a check to find haunts that normally require you to be Searching. You still need to meet any other requirements to find the haunt.</p>
