--- a/data/feats/ancestry-05-2vlQ09QIBli5u9Gz.htm
+++ b/data/feats/ancestry-05-2vlQ09QIBli5u9Gz.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have heard the Call, and in constantly resisting that persistent demand, you've developed a mental bulwark against effects that would target your mind.
-Avantage: Vous avez entendu l’appel, et en résistant constamment à cette demande persistante, vous avez développé un rempart mental contre les effets qui viseraient votre esprit.
+Avantage: Vous résistez plus facilement aux effets mentaux.
 
 ------ Description (en) ------
 <p>You have heard the Call, and in constantly resisting that persistent demand, you've developed a mental bulwark against effects that would target your mind.</p>
