--- a/data/feats/ancestry-05-4M36jGbeSDfZFM38.htm
+++ b/data/feats/ancestry-05-4M36jGbeSDfZFM38.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your senses let you react rapidly.
-Avantage: Vos sens vous permettent de réagir rapidement.
+Avantage: Vous obtenez un bonus de circonstances de +2 aux tests de Perception lors des jets d'initiative.
 
 ------ Description (en) ------
 <p>Your senses let you react rapidly. You gain a +2 circumstance bonus to Perception checks made as initiative rolls. Additionally, if your initiative roll result is tied with that of an opponent, you go first, regardless of whether you rolled Perception or not.</p>
