--- a/data/feats/ancestry-05-5AnJTAZnuWrkL8fa.htm
+++ b/data/feats/ancestry-05-5AnJTAZnuWrkL8fa.htm
@@ -2,12 +2,11 @@ Name: Defiance Unto Death
 Nom: Défi jusqu'à la mort
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You loathe the alghollthus and their mind magic, and you’ve been trained to be willing to die rather than give into mental manipulation.
-Avantage: Vous détestez les alghollthus et leur magie mentale, et vous avez été entraîné à être prêt à mourir plutôt que de céder à la manipulation mentale.
+Avantage: Vous êtes prêt à mourir sur place plutôt que de céder à la manipulation mentale.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Spiresworn elf<br /></p>
@@ -16,5 +15,5 @@ Avantage: Vous détestez les alghollthus et leur magie mentale, et vous avez ét
 ------ Description (fr) ------
 <p><strong>Accès</strong> Elfe de la Tour acérée</p>
 <hr />
-<p>Vous abhorrez les Alghollthus et leur magie de l'esprit et vous avez été entraîné à préférer la mort plutôt que de permettre d'être l'objet d'une manipulation mentale.</p>
+<p>Vous abhorrez les Alghollthus et leur magie de l'esprit et vous avez été entraîné à préférer la mort plutôt que de céder à la manipulation mentale.</p>
 <p>Si vous débutez votre tour @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus}, @Compendium[pf2e.conditionitems.9qGBRpbX9NEwtAAr]{Contrôlé} ou @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{En fuite} à cause de l'échec d'un jet de Volonté, vous pouvez tenter un jet de Volonté contre le même DD ; sur un succès, vous êtes @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralysé} jusqu'à votre prochain tour, au lieu d'agir contre votre volonté.</p>
