--- a/data/feats/ancestry-05-5iULRBRDOryuWX6t.htm
+++ b/data/feats/ancestry-05-5iULRBRDOryuWX6t.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You make the most of your iruxi unarmed attacks.
-Avantage: Vous tirez le meilleur parti de vos attaques à mains nues iruxi.
+Avantage: Vous appliquez l'effet de critique spécialisé de vos attaques à mains nues iruxies.
 
 ------ Description (en) ------
 <p>You make the most of your iruxi unarmed attacks. Whenever you score a critical hit with a claw or an unarmed attack you gained from a lizardfolk ancestry feat, you apply the unarmed attack's critical specialization effect.</p>
