--- a/data/feats/ancestry-05-7ZwXUlnqjj9zEYbO.htm
+++ b/data/feats/ancestry-05-7ZwXUlnqjj9zEYbO.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have a knack for breaking and dismantling things.
-Avantage: Vous avez un don pour casser et démonter les choses.
+Avantage: Vous êtes qualifié en Vol et cassez facilement les choses laissées à votre portée.
 
 ------ Description (en) ------
 <p>You have a knack for breaking and dismantling things. Putting them back together is the boring part, so you largely don't bother with that. You become trained in Thievery. If you would automatically become trained in Thievery (from your background or class, for example), you instead become trained in a skill of your choice. In addition, whenever you hit with a @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} against a trap or an unattended object, you ignore the first 5 points of the object's Hardness.</p>
