--- a/data/feats/ancestry-05-8RZ4VKXJgtl1aN27.htm
+++ b/data/feats/ancestry-05-8RZ4VKXJgtl1aN27.htm
@@ -6,7 +6,7 @@ PrereqFR: Tatouages arcaniques
 
 ------ Benefits and spoiler ----
 Benefits: You expand your tattoos to encompass greater magic.
-Avantage: Vous étendez vos tatouages pour englober une plus grande magie.
+Avantage: Vous pouvez lancer un sort arcanique de niveau 1 une fois par jour.
 
 ------ Description (en) ------
 <p>You expand your tattoos to encompass greater magic. Choose a 1st-level arcane spell from the same school as your Arcane Tattoos, either a common spell or another to which you have access. You can cast that spell once per day as an innate arcane spell.</p>
