--- a/data/feats/ancestry-05-9CIy4cJJTcRM30Vz.htm
+++ b/data/feats/ancestry-05-9CIy4cJJTcRM30Vz.htm
@@ -1,9 +1,12 @@
 Name: Tough Tumbler
 Nom: Cascadeur coriace
 PrereqEN: Scamper Underfoot
-Avantage:
 PrereqFR: Détaler par dessous
 État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous savez vous faufiler sur le champ de bataille.
 
 ------ Description (en) ------
 <p>You've taken your share of licks while scurrying around the battlefield and know how to defend yourself against opportunistic attackers. Your movement ends only when you critically fail an Acrobatics check to Tumble Through an enemy's space (or when you don't have enough Speed to move all the way through its space). You still trigger reactions on a failure to Tumble Through, but you gain a +1 circumstance bonus to AC against attacks that you trigger in this way.</p>
