--- a/data/pathfinder-bestiary/PiAGhPEzJMC2egQk.htm
+++ b/data/pathfinder-bestiary/PiAGhPEzJMC2egQk.htm
@@ -1,7 +1,6 @@
 Name: Animated Statue
 Nom: Statue animée
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Animated statues are often used to guard crypts, small shrines, or areas in government buildings where they can be positioned amid normal statues to hide their true nature until an intruder arouses their ire. Adventurers' suspicions regarding statues suddenly animating and attacking has led many less scrupulous adventurers to automatically attack any statues they encounter, ruining harmless, ancient relics.<br /><br />
