--- a/data/pathfinder-bestiary/PiZkpRK23u89h82S.htm
+++ b/data/pathfinder-bestiary/PiZkpRK23u89h82S.htm
@@ -1,7 +1,6 @@
 Name: Hobgoblin Soldier
-Nom: Soldat hobgobelin
-État: changé
-État d'origine: officielle
+Nom: Soldat Hobgobelin
+État: officielle
 
 ------ Description (en) ------
 Soldiers make up the bulk of hobgoblin society, whether that society is a village or a military unit.<br /><br />
