--- a/data/pathfinder-bestiary/qHqhUWeNUZRET9xV.htm
+++ b/data/pathfinder-bestiary/qHqhUWeNUZRET9xV.htm
@@ -1,7 +1,6 @@
 Name: Dire Wolf
 Nom: Loup sanguinaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Much larger and more foul-tempered than their common cousins, dire wolves haunt primeval lands that accommodate their massive size and proportionately large hunting grounds and appetites. Orcs are fond of using dire wolves as mounts, finding their vicious tempers perfect for hunting and warfare.<br /><br />
