--- a/data/pathfinder-bestiary/RDFvGocLW0OuHmlC.htm
+++ b/data/pathfinder-bestiary/RDFvGocLW0OuHmlC.htm
@@ -1,9 +1,8 @@
 Name: Wendigo
 Nom: Wendigo
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Wendigos are incarnations of the fears of starvation, loneliness, and fatal exposure to cold weather. They haunt the frozen expanses of the world.<br /><br />
 ------ Description (fr) ------
-Le wendigo est l’incarnation des terreurs nées de la faim, la solitude et une exposition fatale au froid. Il hante les étendues glacées du monde.<br><br>
+Le Wendigo est l’incarnation des terreurs nées de la faim, la solitude et une exposition fatale au froid. Il hante les étendues glacées du monde.<br><br>
