--- a/data/pathfinder-bestiary/RMSx2C27yty0MTva.htm
+++ b/data/pathfinder-bestiary/RMSx2C27yty0MTva.htm
@@ -1,7 +1,6 @@
 Name: Skeletal Champion
 Nom: Champion squelette
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 These skeletons retain the cunning they possessed in life.<br /><br />
