--- a/data/pathfinder-bestiary/rPaHIh0ICnTLnRO6.htm
+++ b/data/pathfinder-bestiary/rPaHIh0ICnTLnRO6.htm
@@ -1,9 +1,8 @@
 Name: Kobold Scout
-Nom: Éclaireur kobold
-État: changé
-État d'origine: officielle
+Nom: Éclaireur Kobold
+État: officielle
 
 ------ Description (en) ------
 Most kobolds encountered outside of a well-defended warren or lair are kobold scouts, creatures trained for stalking and the hunt.<br /><br />
 ------ Description (fr) ------
-La plupart des kobolds rencontrés à l’extérieur de leurs terriers ou de leurs tanières bien défendus sont des éclaireurs entraînés à la traque et à la chasse.<br><br>
+La plupart des Kobolds rencontrés à l’extérieur de leurs terriers ou de leurs tanières bien défendus sont des éclaireurs entraînés à la traque et à la chasse.<br><br>
