--- a/data/pathfinder-bestiary/saKs2Qaor8QktboH.htm
+++ b/data/pathfinder-bestiary/saKs2Qaor8QktboH.htm
@@ -1,9 +1,8 @@
 Name: Catfolk Pouncer
 Nom: Félide musard
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Catfolk pouncers travel the world in search of new experiences.<br /><br />
 ------ Description (fr) ------
-Les musards voyagent à travers le monde en quête de nouvelles expériences.<br><br>
+Les Musards voyagent à travers le monde en quête de nouvelles expériences.<br><br>
