--- a/data/pathfinder-bestiary/ScOT6QOlXIsevhNq.htm
+++ b/data/pathfinder-bestiary/ScOT6QOlXIsevhNq.htm
@@ -1,9 +1,8 @@
 Name: Deinosuchus
 Nom: Deinosuchus
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 The deinosuchus is a primeval relative of the crocodile, and is an enormous predator capable of catching and eating dinosaurs that wander too close to its domain!<br /><br />
 ------ Description (fr) ------
-Le deinosuchus est le cousin préhistorique du crocodile, un énorme prédateur capable d’attraper et de dévorer des dinosaures qui s’approchent trop de son domaine !<br><br>
+Le Deinosuchus est le cousin préhistorique du crocodile, un énorme prédateur capable d’attraper et de dévorer des dinosaures qui s’approchent trop de son domaine !<br><br>
