--- a/data/feats/ancestry-05-aQNsD2t0Tb4vToA4.htm
+++ b/data/feats/ancestry-05-aQNsD2t0Tb4vToA4.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You bear scars or tattoos enhanced by the mark of your community's prowess.
-Avantage: Vous portez des cicatrices ou des tatouages rehaussés par la marque des prouesses de votre communauté.
+Avantage: Vous appliquez l'effet critique spécialisé en utilisant un groupe d'arme en cas de coup critique.
 
 ------ Description (en) ------
 <p>You bear scars or tattoos enhanced by the mark of your community's prowess. When you select this feat, choose one of the options listed below. When you critically hit using a weapon of the listed group, you apply the weapon's critical specialization effect.</p>
@@ -18,7 +18,7 @@ Avantage: Vous portez des cicatrices ou des tatouages rehaussés par la marque d
 </ul>
 ------ Description (fr) ------
 <p>Vous portez des cicatrices ou des tatouages améliorés par la marque des prouesses de votre communauté.</p>
-<p>Lorsque vous choisisez ce don, choisissez une des options listées ci-dessous. Lorsque vous obtenez un coup critique en utilisant une arme du groupe indiqué, vous appliquez l'effet de critique de spécialisation de l'arme.</p>
+<p>Lorsque vous choisisez ce don, choisissez une des options listées ci-dessous. Lorsque vous obtenez un coup critique en utilisant une arme du groupe indiqué, vous appliquez l'effet critique spécialisé de l'arme.</p>
 <p>Vous obtenez une grande marque ou un tatouage de la forme de l'emblême choisi ou une image similaire (par exemple, la hache pourrait être remplacée par un ours ou un autre symbole de force brute, alors que le bouclier pourrait être une tortue ou un autre symbole associé à une forte capacité défensive) et obtenez l'avantage indiqué.</p>
 <ul>
 <li><strong>Hache</strong> hache ou pic</li>
