--- a/data/feats/ancestry-05-aVRuchEAJIvnd70k.htm
+++ b/data/feats/ancestry-05-aVRuchEAJIvnd70k.htm
@@ -1,9 +1,12 @@
 Name: Skillful Tail (Tiefling)
 Nom: Queue habile (Tieffelin)
 PrereqEN: 
-Avantage:
 PrereqFR: 
 État: libre
+
+------ Benefits and spoiler ----
+Benefits:
+Avantage: Votre queue peut accomplir des actions Interagir simples.
 
 ------ Description (en) ------
 <p>You've always had a tail, but with practice, you've learned to use it for more than signaling your mood.</p>
