--- a/data/feats/ancestry-05-48crF8lpg78fRdhJ.htm
+++ b/data/feats/ancestry-05-48crF8lpg78fRdhJ.htm
@@ -6,7 +6,7 @@ PrereqFR: Adhyabhau
 
 ------ Benefits and spoiler ----
 Benefits: The psychic feedback of another creature's pain fills you with false life.
-Avantage: Le retour psychique de la douleur d'une autre créature vous remplit d'une fausse vie.
+Avantage: Vous obtenez des points de vie temporaires égaux à la moitié des dégâts mentaux que vous avez infligé
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
@@ -15,6 +15,7 @@ Avantage: Le retour psychique de la douleur d'une autre créature vous remplit d
 <p>The psychic feedback of another creature’s pain fills you with false life. You gain temporary Hit Points equal to half the mental damage you dealt from the triggering effect. If the triggering action dealt mental damage to multiple creatures, calculate these temporary Hit Points using the creature that took the most damage. You lose any remaining temporary Hit Points after 1 minute.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par heure</p>
-<p><strong>Déclencheur</strong> Vous infligez les dégâts mentaux.</p>
+<p><strong>Déclencheur</strong> Vous infligez des dégâts mentaux.</p>
 <hr />
-<p>Le retour psychique de la douleur d'une autre créature vous remplit avec une vie fausse. Vous obtenez des points de vie temporaires égaux à la moitié des dégâts mentaux que vous avez infligé grâce à l'effet déclencheur. Si l'action déclencheuse inflige des dégâts mentaux à plusieurs créatures, calculez ces points de vie temporaires en utilisant la créature qui a pris le plus de dégâts. Vous perdez tous les points de vie temporaires après 1 minute.</p>
+<p>Le retour psychique de la douleur d'une autre créature vous remplit d'une fausse vitalité.</p>
+<p>Vous obtenez des points de vie temporaires égaux à la moitié des dégâts mentaux que vous avez infligé grâce à l'effet déclencheur. Si l'action déclencheuse inflige des dégâts mentaux à plusieurs créatures, calculez ces points de vie temporaires en utilisant la créature qui a pris le plus de dégâts. Vous perdez tous point de vie temporaires restants au bout d'une minute.</p>
