--- a/data/feats/ancestry-05-69h9D3syUYLgIPr7.htm
+++ b/data/feats/ancestry-05-69h9D3syUYLgIPr7.htm
@@ -6,10 +6,10 @@ PrereqFR: Chance féline
 
 ------ Benefits and spoiler ----
 Benefits: You are luckier even than most catfolk.
-Avantage: Vous êtes même plus chanceux que la plupart des gens du chat.
+Avantage: Vous pouvez utiliser Chance féline pour les jets de Réflexes et de Vigueur. chat.
 
 ------ Description (en) ------
 <p>You are luckier even than most catfolk. You can trigger Cat's Luck when you fail or critically fail a Fortitude or Will saving throw in addition to Reflex saving throws. You still can use Cat's Luck only once per day.</p>
 ------ Description (fr) ------
 <p>Vous êtes plus chanceux que la plupart des hommes-félins.</p>
-<p>Vous pouvez déclencher Chance féline lorsque vous obtenez un échec ou un échec critique à un jet de Vigueur ou de Volonté en plus du jet de Réflexes. Vous ne pouvez cependant utiliser Chance féline plus d'une seule fois par jour.</p>
+<p>Vous pouvez déclencher votre Chance féline lorsque vous obtenez un échec ou un échec critique à un jet de Vigueur ou de Volonté en plus du jet de Réflexes. Vous ne pouvez cependant utiliser Chance féline plus d'une seule fois par jour.</p>
