--- a/data/feats/ancestry-05-ACXWB7a38ETc32Qj.htm
+++ b/data/feats/ancestry-05-ACXWB7a38ETc32Qj.htm
@@ -15,7 +15,7 @@ Avantage: Vous créez une mélodie si entraînante que vos ennemis ne peuvent s'
 <p><strong>Success</strong> The target takes a –5-foot status penalty to its Speed for 1 round.</p>
 <p><strong>Critical Failure</strong> The target is temporarily immune for 1 hour.</p>
 ------ Description (fr) ------
-<p>Vous créez une mélodie si entraînante, vos ennemis ne peuvent s'empêcher de danser le long. Faites un test de Représentation contre le DD de Volonté de tous les ennemis dans une émanation de 9 m.</p>
+<p>Vous créez une mélodie si entraînante que vos ennemis ne peuvent s'empêcher de danser tout du long. Faites un test de Représentation contre le DD de Volonté de tous les ennemis dans une émanation de 9 m.</p>
 <hr />
 <p><strong>Succès Critique</strong> La cible subit une pénalité de statut de –3 m à sa Vitesse et est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu}, les deux pendant 1 round.</p>
 <p><strong>Success</strong> La cible subit une pénalité de statut de -1,5 m à sa Vitesse pendant 1 round.</p>
