--- a/data/feats/ancestry-05-ALR9knJdktuMWzr4.htm
+++ b/data/feats/ancestry-05-ALR9knJdktuMWzr4.htm
@@ -6,9 +6,9 @@ PrereqFR: Familiarité avec les armes Azarketies
 
 ------ Benefits and spoiler ----
 Benefits: You become familiar with using your weapons both in and out of water.
-Avantage: Vous vous familiarisez avec l'utilisation de vos armes dans et hors de l'eau.
+Avantage: vous appliquez l'effet de critique spécialisé des armes azarketies.
 
 ------ Description (en) ------
 <p>You become familiar with using your weapons both in and out of water. Whenever you critically hit using an azarketi weapon or one of the weapons listed in @Compendium[pf2e.feats-srd.WUMnFrehmFbj2PIm]{Azarketi Weapon Familiarity}, you apply the weapon’s critical specialization effect.</p>
 ------ Description (fr) ------
-<p>Vous vous familiarisez avec l'utilisation de votre arme à la fois sur et sous l'eau. Lorsque vous obtenez un copu critique en utilisant une arme Azarketie ou une des armes énumérées dans le don @Compendium[pf2e.feats-srd.WUMnFrehmFbj2PIm]{Familiarité avec les armes Azarketies}, vous appliquez l'effet de critique spécialisé de l'arme.</p>
+<p>Vous vous familiarisez avec l'utilisation de votre arme à la fois sur et sous l'eau. Lorsque vous obtenez un coup critique en utilisant une arme azarketie ou une des armes énumérées dans le don @Compendium[pf2e.feats-srd.WUMnFrehmFbj2PIm]{Familiarité avec les armes Azarketies}, vous appliquez l'effet de critique spécialisé de l'arme.</p>
