--- a/data/feats/ancestry-05-CnKc1kBejFV5gWtN.htm
+++ b/data/feats/ancestry-05-CnKc1kBejFV5gWtN.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your animalistic connections help you resist natural afflictions.
-Avantage: Vos liens avec l'animal vous aident à résister aux afflictions naturelles.
+Avantage: Vous obtenez un bonus de circonstances de +2 aux jets pour résister aux maladies et aux poisons.
 
 ------ Description (en) ------
 <p>Your animalistic connections help you resist natural afflictions. You gain a +2 circumstance bonus to saves to resist diseases and poisons.</p>
 ------ Description (fr) ------
-<p>Vos liens animaliers vous aident à résister aux afflictions naturelles. Vous obtenez un bonus de circonstances de +2 aux jets pour résister aux maladies et aux poisons.</p>
+<p>Vos liens avec le monde animal vous aident à résister aux afflictions naturelles.</p>
+<p>Vous obtenez un bonus de circonstances de +2 aux jets pour résister aux maladies et aux poisons.</p>
