--- a/data/feats/ancestry-05-DidzozerKLZ2UYLx.htm
+++ b/data/feats/ancestry-05-DidzozerKLZ2UYLx.htm
@@ -6,7 +6,7 @@ PrereqFR: Blocage au bouclier
 
 ------ Benefits and spoiler ----
 Benefits: You reinforce your shield with a rocky outgrowth of metal and stone.
-Avantage: Vous renforcez votre bouclier avec une excroissance rocheuse de métal et de pierre.
+Avantage: Vous ajoutez votre niveau à la Solidité de votre bouclier.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -16,4 +16,4 @@ Avantage: Vous renforcez votre bouclier avec une excroissance rocheuse de métal
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
 <p>Vous renforcez votre bouclier avec une excroissance rocheuse de métal et de pierre.</p>
-<p>Vous Levez votre bouclier. Si vous utiliser la réaction Blocage au bouclier avant votre prochain tour, ajoutez votre niveau de personnage à la Solidité de votre bouclier lorsque vous déterminez combiens de dégâts sont bloqués.</p>
+<p>Vous Levez votre bouclier. Si vous utilisez la réaction Blocage au bouclier avant votre prochain tour, ajoutez votre niveau à la Solidité de votre bouclier lorsque vous déterminez combien de dégâts sont bloqués.</p>
