--- a/data/feats/ancestry-05-B4e8V5nExlScjojY.htm
+++ b/data/feats/ancestry-05-B4e8V5nExlScjojY.htm
@@ -2,14 +2,13 @@ Name: Shoki's Argument
 Nom: Argument de Shoki
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You feel a connection to shokis, the rambling collectors of wayward souls, and might have found old texts written by one.
-Avantage: Vous vous sentez lié aux shokis, ces collecteurs d'âmes errantes, et vous avez peut-être trouvé de vieux textes écrits par l'un d'eux.
+Avantage: Vous êtes qualifié en Diplomatie et pouvez lancer Destruction de mort-vivant.
 
 ------ Description (en) ------
 <p>You feel a connection to shokis, the rambling collectors of wayward souls, and might have found old texts written by one. You are trained in Diplomacy. If you were already trained in Diplomacy (from your background or class, for example), you instead become trained in a skill of your choice. You can also cast @Compendium[pf2e.spells-srd.kcelf6IHl3L9VXXg]{Disrupt Undead} as a divine innate cantrip at will. A cantrip is heightened to a spell level equal to half your level rounded up.</p>
 ------ Description (fr) ------
-<p>Vous sentez un lien vers les Shokis, collecteurs décousus des âmes rétives et vous pourriez avoir trouvé d'anciens textes écrits par un de ces derniers. Vous êtes qualifié en Diplomatie. Si vous étiez déjà qualifié en Diplomatie (par votre historique ou votre classe, par exemple), vous devenez qualifié en une compétence de votre choix. Vous pouvez aussi lancer @Compendium[pf2e.spells-srd.kcelf6IHl3L9VXXg]{Destruction de mort-vivant} comme un tour de magie inné divin à volonté. Un tour de magie est intensifié à un niveau de sort égal à la moitié de votre niveau arrondi au supérieur.</p>
+<p>Vous éprouvez un lien envers les shokis, collecteurs décousus des âmes rétives et vous pourriez avoir trouvé d'anciens textes écrits par un de ces derniers. Vous êtes qualifié en Diplomatie. Si vous étiez déjà qualifié en Diplomatie (par votre historique ou votre classe, par exemple), vous devenez qualifié en une compétence de votre choix. Vous pouvez aussi lancer @Compendium[pf2e.spells-srd.kcelf6IHl3L9VXXg]{Destruction de mort-vivant} comme un tour de magie inné divin à volonté. Un tour de magie est intensifié à un niveau de sort égal à la moitié de votre niveau arrondi au supérieur.</p>
