--- a/data/feats/ancestry-05-BiPQAcvaEO0P2snr.htm
+++ b/data/feats/ancestry-05-BiPQAcvaEO0P2snr.htm
@@ -6,7 +6,7 @@ PrereqFR: Halo
 
 ------ Benefits and spoiler ----
 Benefits: Your halo can enhance positive energy.
-Avantage: Votre halo peut renforcer l'énergie positive.
+Avantage: Les créatures qui ont récupéré des Points de vie d'un effet de guérison positive récupèrent [[/r 1d6]] Points de vie supplémentaires.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You or allies within 30 feet recover Hit Points while your halo is active.</p>
@@ -15,4 +15,4 @@ Avantage: Votre halo peut renforcer l'énergie positive.
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous ou vos alliés dans les 9 m récupère des Points de vie alors que votre halo est actif.</p>
 <hr />
-<p>Votre halo peut améliorer l'énergie positive. Les créatures qui ont récupéré des Points de vie d'un effet de guérison positive récupèrent [[/r 1d6]] Points de vie supplémentaires. Les créatures qui ont bénéficié de ce pouvoir deviennent temporairement immunisées pour son effet pendant les 10 prochaines minutes.</p>
+<p>Votre halo peut augmenter l'énergie positive. Les créatures qui ont récupéré des Points de vie d'un effet de guérison positive récupèrent [[/r 1d6]] Points de vie supplémentaires. Les créatures qui ont bénéficié de ce pouvoir deviennent temporairement immunisées à son effet pendant les 10 prochaines minutes.</p>
