--- a/data/feats/ancestry-05-BuaOQzmRNgIhGsfN.htm
+++ b/data/feats/ancestry-05-BuaOQzmRNgIhGsfN.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your freshly spilled blood is sanctified, and ingesting it causes effects similar to those of holy water.
-Avantage: Votre sang fraîchement versé est sanctifié, et l'ingérer provoque des effets similaires à ceux de l'eau bénite.
+Avantage: Un fiélon, un mort-vivant ou une créature avec une faiblesse aux dégats du Bien qui vous mord subit 1d6 dégâts du Bien.
 
 ------ Description (en) ------
 <p>Your freshly spilled blood is sanctified, and ingesting it causes effects similar to those of @Compendium[pf2e.equipment-srd.efFe4EK7ThUrH446]{Holy Water}.</p>
@@ -14,5 +14,5 @@ Avantage: Votre sang fraîchement versé est sanctifié, et l'ingérer provoque 
 <p>You gain a +4 circumstance bonus to Crafting checks to @Compendium[pf2e.actionspf2e.rmwa3OyhTZ2i2AHl]{Craft} @Compendium[pf2e.equipment-srd.efFe4EK7ThUrH446]{Holy Water} using your own blood as one of the ingredients.</p>
 ------ Description (fr) ------
 <p>Votre sans fraichement répandu est sanctifié et l'ingérer cause des effets similaires à ceux de l'@Compendium[pf2e.equipment-srd.efFe4EK7ThUrH446]{Eau bénite}.</p>
-<p>Lorsqu'un fiélon, un mort-vivant ou une créature avec une faiblesse aux dégats du bien boit votre sang ou vous inflige des dégâts perforants ou tranchants avec des mâchoires, des crocs ou une attaque similaire, cette créature subit [[/r 1d6 #bien]] dégâts du bien.</p>
+<p>Lorsqu'un fiélon, un mort-vivant ou une créature avec une faiblesse aux dégats Bons boit votre sang ou vous inflige des dégâts perforants ou tranchants avec des mâchoires, des crocs ou une attaque similaire, cette créature subit [[/r 1d6 #bien]] dégâts du bien.</p>
 <p>Vous obtenez un bonus de circonstances de +4 aux tests d'Artisanat pour @Compendium[pf2e.actionspf2e.rmwa3OyhTZ2i2AHl]{Fabriquer} de l'eau bénite en utilisant votre propre sang comme un des ingrédients.</p>
