--- a/data/feats/ancestry-05-CXgTn2sE7Do11rlv.htm
+++ b/data/feats/ancestry-05-CXgTn2sE7Do11rlv.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You blend in with unnatural subtlety.
-Avantage: Tu te fond dans la masse avec une subtilité peu naturelle.
+Avantage: Le test nu pour vous cibles lorsque vous êtes caché ou masqué est plus difficile.
 
 ------ Description (en) ------
 <p>You blend in with unnatural subtlety. When you are @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} or @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Hidden}, increase the DC of the flat check to target you to 6 if you're concealed or 12 if you're hidden.</p>
 ------ Description (fr) ------
 <p>Vous vous fondez dans le décor avec une subtilité surnaturelle.</p>
-<p>Lorsque vous êtes @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} ou @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché}, augmentez le DD du test nu pour vous cibler à 6 si vous êtes Masqué ou 12à  si vous êtes Caché.</p>
+<p>Lorsque vous êtes @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} ou @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché}, augmentez le DD du test nu pour vous cibler à 6 si vous êtes Masqué ou à 12 si vous êtes Caché.</p>
