--- a/data/feats/ancestry-05-CdSWMqPOVWIEzyUA.htm
+++ b/data/feats/ancestry-05-CdSWMqPOVWIEzyUA.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can ignore difficult terrain caused by moving through tight spaces that aren't tight enough to force you to Squeeze .
-Avantage: Vous pouvez ignorer le terrain difficile causé par le déplacement dans des espaces étroits qui ne sont pas assez étroits pour vous obliger à vous serrer.
+Avantage: Les espaces étroits ne vous empêchent pas de passer.
 
 ------ Description (en) ------
 <p>You can ignore difficult terrain caused by moving through tight spaces that aren’t tight enough to force you to Squeeze. When you roll a critical failure on a check to Squeeze, you get a failure instead, and when you roll a success, you get a critical success instead.</p>
 ------ Description (fr) ------
-<p>Vous pouvez ignorer le terrain difficile provoqué par le déplacement à travers des espaces étroits qui ne sont pas assez étraoits pour vous forcer à vous Faufiler. Lorsque vous obtenez un échec critique sur un test pour vous Faufiler, vous obtenez un échec à la place et lorsque vous obtenez un succès, vous obtenez un succès critique à la place.</p>
+<p>Vous pouvez ignorer le terrain difficile provoqué par le déplacement à travers des espaces étroits qui ne sont pas assez étroits pour vous obliger à vous Faufiler. Lorsque vous obtenez un échec critique sur un test pour vous Faufiler, vous obtenez un échec à la place et lorsque vous obtenez un succès, vous obtenez un succès critique à la place.</p>
