--- a/data/feats/ancestry-05-DBWfPOYZaupwo3rz.htm
+++ b/data/feats/ancestry-05-DBWfPOYZaupwo3rz.htm
@@ -6,7 +6,7 @@ PrereqFR: Tour de magie adapté|capacité de lancer des sorts de niveau 3
 
 ------ Benefits and spoiler ----
 Benefits: You’ve continued adapting your magic to blend your class’s tradition with your adapted tradition.
-Avantage: Tu as continué à adapter ta magie pour mélanger la tradition de ta classe avec ta tradition adaptée.
+Avantage: Vous ajoutez un tour de magie ou un sort de niveau 1 tiré de la même tradition que le tour de magie que vous avez gagné grace à Tour de magie adapté.
 
 ------ Description (en) ------
 <p>You've continued adapting your magic to blend your class's tradition with your adapted tradition. Choose a cantrip or 1st-level spell from the same magical tradition as your cantrip from Adapted Cantrip. You gain that spell, adding it to your spell repertoire, spellbook, or prepared spells just like the cantrip from Adapted Spell. You can cast this spell as a spell of your class's magical tradition. If you choose a 1st-level spell, you don't gain access to the heightened versions of that spell, meaning you can't prepare them if you prepare spells and you can't learn them or select the spell as a signature spell if you have a spell repertoire.</p>
