--- a/data/feats/ancestry-05-DmYbGBC2ukp8tYD4.htm
+++ b/data/feats/ancestry-05-DmYbGBC2ukp8tYD4.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can see through the haze of flame.
-Avantage: Vous pouvez voir à travers la brume des flammes.
+Avantage: Vous pouvez voir à travers la fumée des flammes.
 
 ------ Description (en) ------
 <p>You can see through the haze of flame. You automatically succeed at the flat check to target a concealed creature if that creature is concealed only by smoke and fire.</p>
 ------ Description (fr) ------
-<p>Vous pouvez voir à travers la fumée et les flammes. Vous obtenez un succès automatique au test nu pour cibler une créature si cette créature est masquée seulement par la fumée ou le feu.</p>
+<p>Vous pouvez voir à travers la fumée des flammes.</p>
+<p>Vous obtenez un succès automatique au test nu pour cibler une créature si cette créature est masquée seulement par la fumée et le feu.</p>
