--- a/data/feats/ancestry-05-bKc8MMFEOpOJJihb.htm
+++ b/data/feats/ancestry-05-bKc8MMFEOpOJJihb.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You harness the oncoming flames and twist them into a screen of heat and smoke, granting you concealment until the beginning of your next turn.
-Avantage: Vous maîtrisez les flammes et les transformez en un écran de chaleur et de fumée qui vous permet de vous dissimuler jusqu'au début de votre prochain tour.
+Avantage: Vous maîtrisez les flammes et les transformez en un écran de chaleur et de fumée qui vous masque jusqu'au début de votre prochain tour.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An effect would deal fire damage to you, even if you resist all the damage.</p>
@@ -17,4 +17,4 @@ Avantage: Vous maîtrisez les flammes et les transformez en un écran de chaleur
 <p><strong>Déclencheur</strong> Un effet devrait vous infliger des dégâts de feu, même si vous résistez à tous ces dégâts.</p>
 <p><strong>Fréquence</strong> une fois toutes les 10 minutes</p>
 <hr />
-<p>Vous maîtrisez les flammes qui arrivent et les transformez en un écran de chaleur et de fumée qui vous masquent jusqu'au début de votre prochain tour.</p>
+<p>Vous maîtrisez les flammes qui arrivent et les transformez en un écran de chaleur et de fumée qui vous masque jusqu'au début de votre prochain tour.</p>
