--- a/data/feats/ancestry-05-DP5VVZHERQlYuYTa.htm
+++ b/data/feats/ancestry-05-DP5VVZHERQlYuYTa.htm
@@ -6,7 +6,7 @@ PrereqFR: Poussée nanite
 
 ------ Benefits and spoiler ----
 Benefits: Your nanites can augment your defenses.
-Avantage: Vos nanites peuvent augmenter vos défenses.
+Avantage: Poussée nanite vous octroie un bonus de statut de +2 au jet de sauvegarde déclencheur.
 
 ------ Description (en) ------
 <p>Your nanites can augment your defenses. You can choose to activate Nanite Surge when you attempt a saving throw, instead of when you attempt a skill check. If you do, you gain a +2 status bonus to the triggering saving throw.</p>
