--- a/data/feats/ancestry-05-EdVMwFRNV1LX1VWh.htm
+++ b/data/feats/ancestry-05-EdVMwFRNV1LX1VWh.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can balance on your toes to step carefully over obstructions.
-Avantage: Vous pouvez vous tenir en équilibre sur vos orteils pour franchir prudemment les obstacles.
+Avantage: Vous ignorez le terrain difficile en vous déplaçant
 
 ------ Description (en) ------
 <p>You can balance on your toes to step carefully over obstructions.</p>
 <p>You @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Stride} and then @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Step}, or Step and then Stride, ignoring difficult terrain during this movement.</p>
 ------ Description (fr) ------
-<p>Vous pouvez vous hisser sur vos orteils pour marcher précautionneusement par dessus les obstacles.</p>
-<p>Vous @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement} puis @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faites un pas} ou Faites un pas, puis Marchez rapidement en ignorant le terrain difficile durant ce déplacement.</p>
+<p>Vous pouvez vous tenir en équilibre sur vos orteils pour éviter précautionneusement les obstacles.</p>
+<p>Vous @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement}, puis @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faites un pas} ou vous Faites un pas, puis Marchez rapidement en ignorant le terrain difficile durant ce déplacement.</p>
