--- a/data/feats/ancestry-05-eVn6hBjNjTB4liKw.htm
+++ b/data/feats/ancestry-05-eVn6hBjNjTB4liKw.htm
@@ -6,7 +6,7 @@ PrereqFR: adorateur de Lamashtu
 
 ------ Benefits and spoiler ----
 Benefits: You bear the favor and blessings of Lamashtu , the Mother of Monsters.
-Avantage: Vous avez les faveurs et les bénédictions de Lamashtu, la mère des monstres.
+Avantage: Vous obtenez un second héritage gobelin.
 
 ------ Description (en) ------
 <p>You bear the favor and blessings of @Compendium[pf2e.deities.aipkJQxP4GBsTaGq]{Lamashtu}, the Mother of Monsters. She has bestowed a mutation upon you, granting you the benefits of another heritage. Choose one goblin heritage that you do not already have; you gain that heritage and its benefits.</p>
