--- a/data/feats/ancestry-05-evwCimenReYvcruj.htm
+++ b/data/feats/ancestry-05-evwCimenReYvcruj.htm
@@ -6,10 +6,10 @@ PrereqFR: Orateur des terriers
 
 ------ Benefits and spoiler ----
 Benefits: You hear animal sounds as conversations instead of unintelligent noise, and can respond in turn.
-Avantage: Vous entendez les sons des animaux comme des conversations et non comme des bruits inintelligents, et vous pouvez y répondre à votre tour.
+Avantage: Vous pouvez parler à tous les animaux et ils vous écoutent.
 
 ------ Description (en) ------
 <p>You hear animal sounds as conversations instead of unintelligent noise, and can respond in turn. You can speak to all animals, not just animals with a burrow Speed. You gain a +1 circumstance bonus to Make an Impression on animals (which usually uses the Diplomacy skill).</p>
 ------ Description (fr) ------
-<p>À vos oreilles, les sons émis par les animaux forment des conversations et non pas des bruits incohérents, et vous pouvez leur répondre de la même manière.</p>
+<p>À vos oreilles, les sons émis par les animaux forment des conversations et non pas des bruits incohérents et vous pouvez leur répondre de la même manière.</p>
 <p>Vous pouvez parler à tous les animaux, pas seulement ceux qui ont une Vitesse de creusement. Vous gagnez un bonus de circonstances de +1 pour Faire bonne impression sur les animaux (ce qui fait généralement appel à la compétence Diplomatie).</p>
