--- a/data/pathfinder-bestiary/T5CUuPsMPb17d6Qy.htm
+++ b/data/pathfinder-bestiary/T5CUuPsMPb17d6Qy.htm
@@ -1,7 +1,6 @@
 Name: Goliath Spider
 Nom: Araignée goliath
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Goliath spiders dwell in the deepest jungles, where they build webs as big as temples and feast on prey as large as hippopotami.<br /><br />
