--- a/data/pathfinder-bestiary/tr75FAbdOkrfQviy.htm
+++ b/data/pathfinder-bestiary/tr75FAbdOkrfQviy.htm
@@ -1,7 +1,6 @@
 Name: Electric Eel
 Nom: Anguille électrique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Usually found in freshwater rivers and lakes, an electric eel is not particularly aggressive, but its ability to stun predators and prey alike can be dangerous to larger creatures searching for their next meals.<br /><br />
