--- a/data/pathfinder-bestiary/UrviURGu5o9LkhxN.htm
+++ b/data/pathfinder-bestiary/UrviURGu5o9LkhxN.htm
@@ -5,4 +5,4 @@ Nom: Brute Diable des mers
 ------ Description (en) ------
 Physically imposing sea devils are equipped with some of the best weaponry the community can find, though most are happy to rend their foes using tooth and nail.<br /><br />
 ------ Description (fr) ------
-Ces diables des mers au physique imposant sont équipés des meilleures armes de la communauté mais la plupart d’entre eux seraient tout aussi satisfaits de déchiqueter leurs victimes à l’aide de leurs griffes et de leurs dents.<br><br>
+Ces Diables des mers au physique imposant sont équipés des meilleures armes de la communauté mais la plupart d’entre eux seraient tout aussi satisfaits de déchiqueter leurs victimes à l’aide de leurs griffes et de leurs dents.<br><br>
