--- a/data/pathfinder-bestiary/vmN9SCUJxN1MIXwp.htm
+++ b/data/pathfinder-bestiary/vmN9SCUJxN1MIXwp.htm
@@ -1,9 +1,8 @@
 Name: Elemental Tsunami
 Nom: Tsunami élémentaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Elemental tsunamis are huge and destructive.<br /><br />
 ------ Description (fr) ------
-Les tsunamis élémentaires sont énormes et destructeurs.<br><br>
+Les Tsunamis élémentaires sont énormes et destructeurs.<br><br>
