--- a/data/pathfinder-bestiary/waPgKbjhijeZ00Zm.htm
+++ b/data/pathfinder-bestiary/waPgKbjhijeZ00Zm.htm
@@ -1,7 +1,6 @@
 Name: Nightmare
 Nom: Destrier noir
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Nightmares are flaming equine harbingers of death.<br /><br />
