--- a/data/pathfinder-bestiary/wifELOkkRO2634bc.htm
+++ b/data/pathfinder-bestiary/wifELOkkRO2634bc.htm
@@ -1,9 +1,8 @@
 Name: Boggard Scout
-Nom: Éclaireur bourbiérin
-État: changé
-État d'origine: officielle
+Nom: Éclaireur Bourbiérin
+État: officielle
 
 ------ Description (en) ------
 Often tasked with patrolling the borders of their lands, boggard scouts learn to speak another language (typically Common) to make it easier to issue threats and insults toward trespassers.<br /><br />
 ------ Description (fr) ------
-Souvent affecté à la surveillance des frontières de leur domaine, les éclaireurs bourbiérins apprennent à parler une autre langue(généralement le commun) pour qu’ils puissent plus facilement évaluer les menaces et insulter les intrus.<br><br>
+Souvent affecté à la surveillance des frontières de leur domaine, les éclaireurs Bourbiérins apprennent à parler une autre langue(généralement le commun) pour qu’ils puissent plus facilement évaluer les menaces et insulter les intrus.<br><br>
