--- a/data/pathfinder-bestiary/XbClt5wkqECrQToJ.htm
+++ b/data/pathfinder-bestiary/XbClt5wkqECrQToJ.htm
@@ -1,9 +1,8 @@
 Name: Ratfolk Grenadier
-Nom: Grenadier homme-rat
-État: changé
-État d'origine: officielle
+Nom: Grenadier Homme-rat
+État: officielle
 
 ------ Description (en) ------
 Ratfolk grenadiers use alchemy and stealth to defend their communities.<br /><br />
 ------ Description (fr) ------
-Les grenadiers hommes-rats utilisent l’alchimie et la discrétion au service de la défense de leur communauté.<br><br>
+Les grenadiers Hommes-rats utilisent l’alchimie et la discrétion au service de la défense de leur communauté.<br><br>
