--- a/data/pathfinder-bestiary/ZsduIlmluQe4ZxFy.htm
+++ b/data/pathfinder-bestiary/ZsduIlmluQe4ZxFy.htm
@@ -1,9 +1,8 @@
 Name: Dero Strangler
-Nom: Étrangleur dero
-État: changé
-État d'origine: officielle
+Nom: Étrangleur Dero
+État: officielle
 
 ------ Description (en) ------
 Dero stranglers specialize in capturing living victims, and they are often called upon to aid in abductions.<br /><br />
 ------ Description (fr) ------
-Les étrangleurs deros sont spécialisés dans la capture de victimes vivantes et on demande souvent leur aide pour les enlèvements.<br><br>
+Les étrangleurs Deros sont spécialisés dans la capture de victimes vivantes et on demande souvent leur aide pour les enlèvements.<br><br>
