--- a/data/pathfinder-bestiary-2/RqcIiiNNEkF28ui2.htm
+++ b/data/pathfinder-bestiary-2/RqcIiiNNEkF28ui2.htm
@@ -1,8 +1,8 @@
 Name: Orca
-Nom: 
-État: auto-trad
+Nom: Orque Épaulard
+État: libre
 
 ------ Description (en) ------
 While many know orcas as &quot;killer whales,&quot; they are actually the largest species of dolphin. These powerful animals hunt together in pods to take down seals, sharks, and even true whales. Adult orcas are typically 15-25 feet long and weigh 8,000-12,000 pounds.<br /><br />
 ------ Description (fr) ------
-Si beaucoup connaissent les orques sous le nom de "baleines tueuses", elles sont en fait la plus grande espèce de dauphins. Ces animaux puissants chassent ensemble en groupes pour abattre des phoques, des requins et même de vraies baleines. Les épaulards adultes mesurent généralement de 15 à 25 pieds de long et pèsent de 8 000 à 12 000 livres ;
+Si beaucoup connaissent les Orques sous le nom de "baleines tueuses", elles sont en fait la plus grande espèce de dauphins. Ces animaux puissants chassent ensemble en groupes pour abattre des phoques, des requins et même de vraies baleines. Les Épaulards adultes mesurent généralement de 4,5 à 7,5 mètres de long et pèsent de 3,5 à 5 tonnes ;
