--- a/data/feats/ancestry-05-FGrIFDobGRFBPOuM.htm
+++ b/data/feats/ancestry-05-FGrIFDobGRFBPOuM.htm
@@ -6,7 +6,7 @@ PrereqFR: expert en Artisanat
 
 ------ Benefits and spoiler ----
 Benefits: You can use your knowledge of engineering and metalwork to temporarily strengthen thick objects and structures.
-Avantage: Vous pouvez utiliser vos connaissances en ingénierie et en métallurgie pour renforcer temporairement des objets et des structures épaisses.
+Avantage: Vous renforcez temporairement la solidité des objets épais ou des structures.
 
 ------ Description (en) ------
 <p>You can use your knowledge of engineering and metalwork to temporarily strengthen thick objects and structures.</p>
