--- a/data/feats/ancestry-05-GAh4CwCMS3Gsl8WH.htm
+++ b/data/feats/ancestry-05-GAh4CwCMS3Gsl8WH.htm
@@ -7,7 +7,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've learned to bind some of your feathers together into a fan to focus your ancestral magic.
-Avantage: Tu as appris à lier certaines de tes plumes pour former un éventail et concentrer ta magie ancestrale.
+Avantage: Vous pouvez lancer Bourrasque de vent au niveau 1 en activant votre éventail à plume Tengu.
 
 ------ Description (en) ------
 <p>You’ve learned to bind some of your feathers together into a fan to focus your ancestral magic. You gain a <em>tengu feather fan</em>: a magic item of light Bulk with a level equal to your level and the evocation and primal traits. You (and only you) can use the <em>tengu feather fan</em> to cast tengu magic. If your fan is lost or destroyed, you can create a replacement during your daily preparations; if you do so, your previous fan falls apart into mundane feathers. Further feats might grant you additional activations of your <em>tengu feather fan</em>, but you can never have more than three activations per day, no matter how many such feats you have. The DC for spells you cast with your <em>tengu feather fan</em> is your class DC or spell DC, whichever is higher.You can cast the 1st-level @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Gust of Wind} spell by activating your <em>tengu feather fan</em>.</p>
@@ -16,7 +16,10 @@ Avantage: Tu as appris à lier certaines de tes plumes pour former un éventail 
 <p><strong>Frequency</strong> once per day;</p>
 <p><strong>Effect</strong> You cast one of the spells contained in your t<em>engu feather fan</em>. Activating the fan takes the spell’s normal number of actions. You can also Activate the fan to cast a cantrip you’ve gained from a heritage or ancestry feat; this activation doesn’t count against the fan’s uses per day.</p>
 ------ Description (fr) ------
-<p>Vous avez appris à lier certaines de vos plumes ensemble pour former un éventail pour concentrer votre magie ancestrale. Vous obtenez un <em>éventail à plume Tengu</em> : un objet magique d'Encombrement léger avec un niveau égal à votre niveau et les traits évocation et primordial. Vous (et seulement vous) vouvez utiliser <em>éventail à plume Tengu</em> pour lancer la magie Tengu. Si votre éventail est perdu ou détruit, vous pouvez créer un remplacement durant vos préparatifs quotidiens ; si vous le faites, votre précédent éventail redevient des plumes banales. Des dons supplémentaires vous accordent des activations additionnelles de votre <em>éventail de plume Tengu </em>, mais vous n'avez droit qu'à trois activations par jour, peu importe combien de dons vous possédez. Le DD pour les sorts que vous lancez avec votre <em>éventail de plume Tengu</em> est le plus élevé entre votre DD de classe ou votre DD de sort. Vous pouvez lancer @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Bourrasque de vent} au niveau 1 en activant votre <em>éventail de plume Tengu</em>.</p>
+<p>Vous avez appris à lier certaines de vos plumes ensemble pour former un éventail pour concentrer votre magie ancestrale. Vous obtenez alors un <em>éventail à plume Tengu</em> : un objet magique d'Encombrement léger avec un niveau égal au votre et les traits évocation et primordial. Vous (et seulement vous) pouvez utiliser l'éventail à plume Tengu pour Lancer la magie Tengu. Si votre éventail est perdu ou détruit, vous pouvez créer un remplaçant au cours de vos préparatifs quotidiens ; si vous le faites, votre précédent éventail redevient fait de plumes banales.</p>
+<p>D'autres dons vous accordent des activations supplémentaires de votre éventail à plume Tengu, mais vous n'avez droit qu'à trois activations maximum par jour, peu importe combien de dons vous possédez.</p>
+<p>Le DD des sorts que vous lancez avec votre éventail à plume Tengu est le plus élevé entre votre DD de classe ou votre DD de sort.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Bourrasque de vent} au niveau 1 en activant votre éventail à plume Tengu.</p>
 <hr />
 <p><strong>Activation</strong> Interaction ;</p>
 <p><strong>Fréquence</strong> une fois par jour ;</p>
