--- a/data/feats/ancestry-05-GgerQCCsGibaGWq0.htm
+++ b/data/feats/ancestry-05-GgerQCCsGibaGWq0.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your unusual physiology has developed in a way that makes it difficult for parasites and other infestations to prey upon you.
-Avantage: Votre physiologie inhabituelle s'est développée de telle sorte qu'il est difficile pour les parasites et autres infestations de s'attaquer à vous.
+Avantage: Vous obtenez un bonus de circonstances de +2 aux jets de sauvegarde contre les maladies.
 
 ------ Description (en) ------
 <p>Your unusual physiology has developed in a way that makes it difficult for parasites and other infestations to prey upon you. You gain a +2 circumstance bonus to saves against diseases.</p>
 ------ Description (fr) ------
-<p>Votre physiologie inhabituelle s'est développée de manière à rendre plus difficile pour des parasites et d'autres infestations de vous prendre pour proie. Vous obtenez un bonus de circonstances de +2 aux jets de sauvegarde contre les maladies.</p>
+<p>Votre physiologie inhabituelle s'est développée de manière à rendre plus difficile pour des parasites et d'autres infestations de vous prendre pour cible. Vous obtenez un bonus de circonstances de +2 aux jets de sauvegarde contre les maladies.</p>
