--- a/data/feats/ancestry-05-gS9FYlD0Vt8yyZkP.htm
+++ b/data/feats/ancestry-05-gS9FYlD0Vt8yyZkP.htm
@@ -6,7 +6,7 @@ PrereqFR: qualifié en Duperie
 
 ------ Benefits and spoiler ----
 Benefits: With obsequious words and begging gestures, you convince your foe you're less of a threat.
-Avantage: Avec des mots obséquieux et des gestes de supplication, vous convainquez votre ennemi que vous n'êtes pas une menace.
+Avantage: Vous pouvez feinter un adversaire en faisant appel à sa Volonté à distance.
 
 ------ Description (en) ------
 <p>With obsequious words and begging gestures, you convince your foe you're less of a threat.</p>
