--- a/data/feats/ancestry-05-Ewk7h9aQpKvy1RJo.htm
+++ b/data/feats/ancestry-05-Ewk7h9aQpKvy1RJo.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've learned to disperse the crystalline motes coating your body as a haze.
-Avantage: Tu as appris à disperser les mottes cristallines qui recouvrent ton corps sous forme de brume.
+Avantage: Des particules cristallines vous masquent.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Tu as appris à disperser les mottes cristallines qui recouvrent ton c
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous avez appris à disperser les particules cristallines recouvrant votre corps comme unu brume. Vous devenez Masqué, bien que vous ne puissiez pas utiliser ce camouflage pour vous Cacher ou Être furtif, comme d'ordinaire avec le camouflage lorsque votre position est toujours évidente. Les particules restent à un pouce de votre peau, se déplaçant avec vous et dure pendant un nombre de rounds égal à la moitié de votre niveau.</p>
+<p>Vous avez appris à disperser les particules cristallines recouvrant votre corps sous la forme de brume. Vous devenez Masqué, bien que vous ne puissiez pas utiliser ce camouflage pour vous Cacher ou Être furtif, comme d'ordinaire avec le camouflage lorsque votre position reste toujours évidente. Les particules restent à quelques centimètres de votre peau, se déplaçant avec vous et persistent pendant un nombre de rounds égal à la moitié de votre niveau.</p>
