--- a/data/feats/ancestry-05-FLuv8uI1KoodNgY4.htm
+++ b/data/feats/ancestry-05-FLuv8uI1KoodNgY4.htm
@@ -6,9 +6,10 @@ PrereqFR: Familiarité avec les armes gobelines
 
 ------ Benefits and spoiler ----
 Benefits: You know how to wield your people’s vicious weapons.
-Avantage: Vous savez comment manier les armes vicieuses de votre peuple.
+Avantage: Vous appliquez l’effet critique spécialisé des armes gobelines en cas de coup critique.
 
 ------ Description (en) ------
 <p>You know how to wield your people's vicious weapons. Whenever you score a critical hit using a goblin weapon, you apply the weapon's critical specialization effect.</p>
 ------ Description (fr) ------
-<p>Vous savez manier les cruelles armes de votre peuple. À chaque fois que vous réussissez un coup critique avec une arme gobeline, vous appliquez l’effet critique spécialisé de cette arme.</p>
+<p>Vous savez manier les cruelles armes de votre peuple.</p>
+<p>À chaque fois que vous réussissez un coup critique avec une arme gobeline, vous appliquez l’effet critique spécialisé de cette arme.</p>
