--- a/data/feats/ancestry-05-G1BPXzTzrUE4IndV.htm
+++ b/data/feats/ancestry-05-G1BPXzTzrUE4IndV.htm
@@ -6,7 +6,7 @@ PrereqFR: Vision dans le noir
 
 ------ Benefits and spoiler ----
 Benefits: Using ancient dwarven methods developed to fight enemies wielding magical darkness, you've honed your darkvision and sworn not to use such magic yourself.
-Avantage: En utilisant d'anciennes méthodes naines développées pour combattre les ennemis maniant la magie des ténèbres, vous avez perfectionné votre vision dans le noir et juré de ne pas utiliser cette magie vous-même.
+Avantage: Vous obtenez Vision dans le noir supérieure mais vous ne pouvez plus employer l'obscurité.
 
 ------ Description (en) ------
 <p>Using ancient dwarven methods developed to fight enemies wielding magical darkness, you've honed your darkvision and sworn not to use such magic yourself.</p>
