--- a/data/feats/ancestry-05-GTA6QM7cH40L8H5Q.htm
+++ b/data/feats/ancestry-05-GTA6QM7cH40L8H5Q.htm
@@ -2,14 +2,14 @@ Name: Fey Disguise
 Nom: Déguisement de fée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can disguise yourself with magical illusions.
-Avantage: Vous pouvez vous déguiser avec des illusions magiques.
+Avantage: Vous pouvez lancer Déguisement illusoire une fois par jour.
 
 ------ Description (en) ------
 <p>You can disguise yourself with magical illusions. You can cast @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Illusory Disguise} once per day as a 1st-level primal innate spell. At 7th level, the spell is heightened to 2nd level, and every 2 levels thereafter, the spell is heightened an additional spell level.</p>
 ------ Description (fr) ------
-<p>Vous pouvez vous déguiser grâce à vos illusions magiques. Vous pouvez lancer @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Déguisement illusoire} une fois par jour comme un sort inné primordial de niveau 1. Au niveau 7, le sort est intensifié au niveau 2, et le sort est intensifié d'un niveau supplémentaire par tranche de 2 niveaux.</p>
+<p>Vous pouvez vous déguiser grâce à vos illusions magiques.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Déguisement illusoire} une fois par jour comme un sort inné primordial de niveau 1. Au niveau 7, le sort est intensifié au niveau 2, et le sort est intensifié d'un niveau supplémentaire par tranche de 2 niveaux.</p>
